<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
        </dependency>
    </dependencies>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.7</version>
        <relativePath/>
    </parent>

    <groupId>ee.q-rental</groupId>
    <artifactId>q-rental-parent-pom</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Parent POM</name>
    <description>Parent POM file for  q-rental Auto Rent application</description>

    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>US-ASCII</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>commoncore</module>
        <module>application</module>
        <module>driverpotential</module>
        <module>driver</module>
        <module>car</module>
        <module>transaction</module>
        <module>link</module>
        <module>thymeleaf</module>
    </modules>

</project>
